--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5,7 +5,7 @@
 	background-color:#eaedff;
 }
 .registration{
-	box-shadow: 0px 0px 25px 1px #c7ccec;
+	/* box-shadow: 0px 0px 25px 1px #c7ccec; */
 	
 }
 
