--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5561,7 +5561,7 @@ del {
 .header-area .menu-wrapper {
   display: flex;
   align-items: center;
-  justify-content: space-between
+  justify-content: end;
 }
 
 .header-area .main-menu ul li {
@@ -7791,7 +7791,7 @@ form.search-box .search-form a {
   }
 
   form .form-row .input-data {
-    margin: 35px 0 !important;
+    margin: 51px 0 !important;
   }
 
   .submit-btn .input-data {
