--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5567,7 +5567,7 @@ del {
 .header-area .main-menu ul li {
   display: inline-block;
   position: relative;
-  /* z-index: 2; */
+  z-index: 2;
 }
 
 .header-area .main-menu ul li a {
