--- a/public/assets/css/subuser/addTracker.css
+++ b/public/assets/css/subuser/addTracker.css
@@ -52,4 +52,27 @@ textarea{
     box-shadow: 0 7px 13px rgba(0, 0, 0, 0.3); 
 }
 
+  .currenlyLog {
+            margin-top: -0.75rem !important;
+        }
+
+        label {
+            font-weight: bold;
+        }
+
+        h3 {
+            color: #e35e25;
+        }
+
+        hr {
+            border-bottom: 3px solid #eceff8;
+        }
+
+        .bootstrap-tagsinput .badge {
+            margin-right: 2px;
+        }
+
+a.dropdown-item {
+    text-wrap : auto;
+}
 
